Improved health check
