# src/main/kotlin/com/kcrud/data/utils/pagination/PageableRequest.kt
@@ -14,34 +14,34 @@ import io.ktor.server.application.*
 internal fun ApplicationCall.getPageable(): Pageable? {
     val pageIndex: Int? = request.queryParameters["page"]?.toIntOrNull()
     val pageSize: Int? = request.queryParameters["size"]?.toIntOrNull()
-    val sortFieldName: String? = request.queryParameters["sort"]
-    val sortDirection: String? = request.queryParameters["direction"]
+    val orderFieldName: String? = request.queryParameters["order"]
+    val sortDirection: String? = request.queryParameters["sort"]
 
-    // Check if pagination and sorting parameters are valid pairs.
+    // Check if pagination and order parameters are valid pairs.
     val isPaginationValid = (pageIndex != null && pageSize != null) || (pageIndex == null && pageSize == null)
-    val isSortingValid = (sortFieldName != null && sortDirection != null) || (sortFieldName == null && sortDirection == null)
+    val isOrderingValid = (orderFieldName != null && sortDirection != null) || (orderFieldName == null && sortDirection == null)
 
-    // If neither pagination nor sorting parameters are provided, return null.
-    if (pageIndex == null && pageSize == null && sortFieldName == null && sortDirection == null) {
+    // If neither pagination nor ordering parameters are provided, return null.
+    if (pageIndex == null && pageSize == null && orderFieldName == null && sortDirection == null) {
         return null
     }
 
     // Ensure that incomplete pairs are not provided.
     require(isPaginationValid) { "Incomplete pageable attributes. Either both page and size must be specified, or none of them." }
-    require(isSortingValid) { "Incomplete sorting attributes. Either both sort and direction must be specified, or none of them." }
+    require(isOrderingValid) { "Incomplete order attributes. Either both order and direction must be specified, or none of them." }
 
-    // Create the Sort object if sorting parameters are provided
-    val sort = if (sortFieldName != null) {
-        Pageable.Sort(
-            field = sortFieldName,
-            direction = Pageable.SortDirection.entries.firstOrNull { it.name.equals(sortDirection, ignoreCase = true) }
-                ?: throw IllegalArgumentException("Sort direction not found: $sortDirection")
+    // Create the Order object if ordering parameters are provided
+    val order = if (orderFieldName != null) {
+        Pageable.Order(
+            field = orderFieldName,
+            sort = Pageable.SortDirection.entries.firstOrNull { it.name.equals(sortDirection, ignoreCase = true) }
+                ?: throw IllegalArgumentException("Ordering sort direction is invalid: $sortDirection")
         )
     } else null
 
     return Pageable(
         page = pageIndex ?: 1,
         size = pageSize ?: 0,
-        sort = sort
+        order = order
     )
 }
