# src/main/kotlin/com/kcrud/routes/main/HealthCheckRoute.kt
@@ -7,6 +7,8 @@
 package com.kcrud.routes.main
 
 import com.kcrud.data.database.shared.DatabaseManager
+import com.kcrud.graphql.GraphQLFramework
+import com.kcrud.security.snowflake.SnowflakeData
 import com.kcrud.security.snowflake.SnowflakeFactory
 import com.kcrud.settings.SettingsProvider
 import com.kcrud.utils.NetworkUtils
@@ -15,10 +17,7 @@ import io.ktor.server.application.*
 import io.ktor.server.auth.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
-import kotlinx.datetime.Clock
-import kotlinx.datetime.LocalDateTime
-import kotlinx.datetime.TimeZone
-import kotlinx.datetime.toLocalDateTime
+import kotlinx.datetime.*
 import kotlinx.serialization.Serializable
 
 /**
@@ -47,13 +46,31 @@ fun Route.systemRoute() {
 
     NetworkUtils.logEndpoints(
         reason = "System endpoints. Requires basic authentication credentials",
-        endpoints = listOf("health", "snowflake/{id}")
+        endpoints = listOf("health", "snowflake/${SnowflakeFactory.nextId()}")
     )
 }
 
 @Serializable
 data class HealthCheckResponse(
     val ready: Boolean = true,
+    val machineId: Int = SettingsProvider.global.machineId,
+    val development: Boolean = SettingsProvider.global.development,
     val databaseAlive: Boolean = DatabaseManager.ping(),
-    val timestamp: LocalDateTime = Clock.System.now().toLocalDateTime(TimeZone.UTC)
+    val databasePoolSize: Int = SettingsProvider.database.connectionPoolSize,
+    val databaseJDBC: String = SettingsProvider.database.jdbcDriver,
+    val databaseJDBCUrl: String = SettingsProvider.database.jdbcUrl,
+    val protocol: String = NetworkUtils.getProtocol(),
+    val server: String = NetworkUtils.getServerUrl(),
+    val apiVersion: String = SettingsProvider.deployment.apiVersion,
+    val jwtEnabled: Boolean = SettingsProvider.security.jwt.isEnabled,
+    val basicAuthEnabled: Boolean = SettingsProvider.security.basicAuth.isEnabled,
+    val graphQLEnabled: Boolean = SettingsProvider.graphql.isEnabled,
+    val graphQLFramework: GraphQLFramework = SettingsProvider.graphql.framework,
+    val graphQLPlayground: Boolean = SettingsProvider.graphql.playground,
+    val graphQLDumpSchemaEnabled: Boolean = SettingsProvider.graphql.dumpSchema,
+    val docsEnabled: Boolean = SettingsProvider.docs.isEnabled,
+    val snowflakeTestId: String =  SnowflakeFactory.nextId(),
+    val snowflakeTestResult: SnowflakeData = SnowflakeFactory.parse(id = snowflakeTestId),
+    val utc: LocalDateTime = Clock.System.now().toLocalDateTime(TimeZone.UTC),
+    val local: LocalDateTime = utc.toInstant(TimeZone.UTC).toLocalDateTime(TimeZone.currentSystemDefault())
 )
